Bug 275108 - [WebGPU] shader accesses null texture when video frame is not available
Summary: [WebGPU] shader accesses null texture when video frame is not available
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mike Wyrzykowski
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-06-04 08:51 PDT by Mike Wyrzykowski
Modified: 2024-06-06 09:49 PDT (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wyrzykowski 2024-06-04 08:51:01 PDT
[WebGPU] shader accesses null texture when video frame is not available
Comment 1 Mike Wyrzykowski 2024-06-04 08:51:16 PDT
radar://129218790
Comment 2 Mike Wyrzykowski 2024-06-04 13:33:24 PDT
Pull request: https://github.com/WebKit/WebKit/pull/29513
Comment 3 EWS 2024-06-06 09:49:32 PDT
Committed 279773@main (8f98c5f845ce): <https://commits.webkit.org/279773@main>

Reviewed commits have been landed. Closing PR #29513 and removing active labels.