[WebGPU] shader accesses null texture when video frame is not available https://bugs.webkit.org/show_bug.cgi?id=275108 <radar://129218790>

Reviewed by Dan Glastonbury.

Fallback to placeholder when video texture is not available.

* LayoutTests/fast/webgpu/regression/repro_275108-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_275108.html: Added.
* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::Device::createBindGroup):

Canonical link: https://commits.webkit.org/279773@main